--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
     <title>Privacy Policy - Global Talent Arena</title>
 </head>
 <body style="font-family: Arial; max-width:800px; margin:auto; padding:20px;">
-    <h1>Privacy Policy – Global Talent Arena</h1>
+    <h1>Privacy Policy â€“ Global Talent Arena</h1>
 
     <p>Your privacy matters to us. This document explains what data we collect and why.</p>
 
