--- a/terms.html
+++ b/terms.html
@@ -5,9 +5,9 @@
     <title>Terms of Service - Global Talent Arena</title>
 </head>
 <body style="font-family: Arial; max-width:800px; margin:auto; padding:20px;">
-    <h1>Terms of Service ñ Global Talent Arena</h1>
+    <h1>Terms of Service ‚Äì Global Talent Arena</h1>
 
-    <p>Welcome to Global Talent Arena (ìGTAî). By using our service, you agree to these terms.</p>
+    <p>Welcome to Global Talent Arena (‚ÄúGTA‚Äù). By using our service, you agree to these terms.</p>
 
     <h2>1. Platform</h2>
     <p>GTA organizes online talent competitions where users upload and vote on videos.</p>
