--- a/privacy.html
+++ b/privacy.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Global Talent Arena</title>
+    <meta name="description" content="Privacy Policy for Global Talent Arena - TikTok API Integration">
 </head>
 <body style="font-family: Arial; max-width:800px; margin:auto; padding:20px;">
     <h1>Privacy Policy – Global Talent Arena</h1>
