--- a/terms.html
+++ b/terms.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service - Global Talent Arena</title>
+    <meta name="description" content="Terms of Service for Global Talent Arena - TikTok API Integration">
 </head>
 <body style="font-family: Arial; max-width:800px; margin:auto; padding:20px;">
     <h1>Terms of Service – Global Talent Arena</h1>
 
-    <p>Welcome to Global Talent Arena (“GTA”). By using our service, you agree to these terms.</p>
+    <p>Welcome to Global Talent Arena ("GTA"). By using our service, you agree to these terms.</p>
 
     <h2>1. Platform</h2>
     <p>GTA organizes online talent competitions where users upload and vote on videos.</p>
